# pseudo_tv

./: .dockerignore  .gitignore  Dockerfile  channel_description.py  compose.yml  data_types.py  ersatz_builder.py  example.json  grid_generator.py  jellyfin_api.py  main.py  pyproject.toml  readme.md  runme.sh  settings.py  utils.py
data/: playout_template.txt
data/catalog_templates/: catalog (1).json  demo1.json  demo2.json  demo3.json  demo4.json
data/prompts/: catalog_construction.txt  channels_description.txt
data/prompts/scripts/: catalog_validation.py  test_validation.py  validate_catalog_rules.py  validate_json_structure.py
